--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" class="gameobject" material="" geometry="">Cylinder</a-cylinder>
             <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" class="gameobject" material="" geometry="">Plane</a-plane>
             <a-sky color="#ECECEC" material="" geometry="" scale=""></a-sky>
-          <canvas class="a-canvas a-grab-cursor" data-aframe-canvas="true" data-engine="three.js r147" width="1366" height="651" style=""></canvas><div class="a-loader-title" style="display: none;">EMON</div><a-entity camera="" position="" wasd-controls="" rotation="" look-controls="" aframe-injected=""></a-entity><div class="a-enter-vr fullscreen" aframe-injected=""><button class="a-enter-vr-button" title="Enter VR mode with a headset or fullscreen without" aframe-injected=""></button></div><div class="a-enter-ar a-hidden" aframe-injected=""><button class="a-enter-ar-button" title="Enter AR mode with a headset or handheld device." aframe-injected=""></button></div><div class="a-orientation-modal a-hidden" aframe-injected=""><button aframe-injected="">Exit VR</button></div><a-entity light="" data-aframe-default-light="" aframe-injected=""></a-entity><a-entity light="" position="" data-aframe-default-light="" aframe-injected=""></a-entity></a-scene>
+        </a-scene>
         <style>
     body {
         margin: 0;
